-
Bug
-
Resolution: Done
-
P1: Critical
-
5.9.0 Alpha
-
None
When you move an Android app using Qt Nfc to the background and start it again by using the icon in the app launcher there is a crash with the following logentry: JNI DETECTED ERROR IN APPLICATION: GetMethodID received NULL jclass in call to GetMethodID.
This call comes from qnearfieldtarget_android.cpp
-> void NearFieldTarget::updateTechList()
-> tag.callObjectMethod("getTechList", "()[Ljava/lang/String;");
| For Gerrit Dashboard: QTBUG-59343 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 187701,3 | NFC on Android: Fix crash on restart of an app | 5.9 | qt/qtconnectivity | Status: MERGED | +2 | 0 |
| 188649,2 | NFC on Android: Fix crash on restart of an app in debug build | 5.9 | qt/qtconnectivity | Status: MERGED | +2 | 0 |