NFC on Android: Fix crash on restart of an app in debug build

Task-number: QTBUG-59343
Change-Id: Ib474db8e9a8d38b3d5668499f838cb8d38e10625
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>